# DigitalImageProcessingLab

./: .gitattributes  .gitignore  CMakeLists.txt  Config.h.in  README.md  package-lock.json
Common/: BMPImage.cpp  Util.cpp
Lab1/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  main.cpp
Lab3/: CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt  main.cpp
doc/: 2022数字图象处理实验第一部分-张星明.ppt  中文指导书-数字图象处理-2020.doc  实验报告Lab1.doc  实验报告Lab2.doc  实验报告Lab3.doc  实验报告Lab4.doc  实验须知.docx  新实验报告模板的副本3.doc
include/: Config.h
include/Common/: BMPImage.h  Util.h
